Update heading text

--- a/about.html
+++ b/about.html
@@ -38,8 +38,9 @@
     <main class="main-container about-container">
         <div class="center-about">
             <h1 class="top-h1-about">Hello! sharing world</h1>
-            <h1 class="main-sec-heading-about">Creative city Global Summit 2015</h1>
+            <h2 class="main-sec-heading-about">CREATIVE CITY SUMMIT 2015</h1>
             <p class="main-par-about">
+                Connecting with sector colleagues is an essential part of developing culture in Canada. Every year, delegates representing culture work across the country gather to share, learn, and grow..
                 Connecting with sector colleagues is an essential part of developing culture in Canada. Every year, delegates representing culture work across the country gather to share, learn, and grow..
             </p>
             <p class="contact-us">
