Update font link

--- a/about.html
+++ b/about.html
@@ -23,7 +23,7 @@
         </nav>
         <nav class="sec-navbar">
             <span class="menu" id="menu"><i class="fas fa-bars"></i></span>
-            <img class="logo" src="./images/logo.png" alt="logo">
+            <a href="index.html"><img class="logo" src="./images/logo.png" alt="logo"></a>
             <ul class="second-list" id="mobile-menu">
                 <li><i class="fas fa-times close-btn" id="close-btn"></i></li>
                 <li><a href="index.html" class="nav-list" id="about-link">Home</a></li>
